# rust-error-utils

./: .editorconfig  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  bootstrap.sh  rustfmt.toml
error-utils/: Cargo.toml
error-utils-derive/: Cargo.toml
error-utils-derive/src/: error.rs  lib.rs
error-utils-derive/src/error/: collection.rs  generics.rs  variant.rs
error-utils-derive/tests/: base.rs  generics.rs
error-utils/examples/: toml.rs
error-utils/src/: fail.rs  handle.rs  lib.rs
hooks/: pre-commit.hook
