[package]
name = "error-utils-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Some rust proc-macros to simplify common error handling patterns"
readme = "../README.md"
repository = "https://gitlab.com/robert-oleynik/rust-error-utils"
keywords = [ "error", "macro", "utility" ]
categories = [ "rust-patterns" ]

[lib]
proc-macro = true
bench = false

[dependencies]
quote = "~1.0.20"

[dependencies.syn]
version = "~1.0.98"
features = ["extra-traits"]
