[package]
name = "error-utils"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Some rust macros to simplify common error handling patterns"
readme = "README.md"
repository = "https://gitlab.com/robert-oleynik/rust-error-utils"
keywords = [ "error", "macro", "utility" ]
categories = [ "rust-patterns" ]


[features]
default = []
derive = [ "error-utils-derive" ]

[dependencies.error-utils-derive]
path = "../error-utils-derive"
optional = true

[dev-dependencies]
toml = "~0.5.9"
