[package]
name = "error-utils"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Some rust macros to simplify common error handling patterns"
readme = "../README.md"
repository = "https://gitlab.com/robert-oleynik/rust-error-utils"
keywords = [ "error", "macro", "utility" ]
categories = [ "rust-patterns" ]


[features]
default = [ "derive" ]
derive = [ "error-utils-derive" ]

[dependencies.error-utils-derive]
version = "0.1.3"
optional = true

[dev-dependencies]
toml = "~0.5.9"
